Eclipse 4.36 (M3) JDT Patch for Groovy-Eclipse
https://github.com/eclipse-jdt/eclipse.jdt.core/releases/tag/S4_36_0_M3

for #1619 #1620