@@ -24,12 +24,6 @@ import org.eclipse.jdt.internal.compiler.impl.JavaFeature;
 
 public class PreviewFeatureTest extends AbstractRegressionTest9 {
 
-	static {
-//		TESTS_NUMBERS = new int [] { 40 };
-//		TESTS_RANGE = new int[] { 1, -1 };
-//		TESTS_NAMES = new String[] { "test001"};
-	}
-
 	public static Class<?> testClass() {
 		return PreviewFeatureTest.class;
 	}
@@ -42,9 +36,9 @@ public class PreviewFeatureTest extends AbstractRegressionTest9 {
 	@Override
 	protected Map<String, String> getCompilerOptions() {
 		Map<String, String> options = super.getCompilerOptions();
-		if (isJRE17Plus) {
+//		if (isJRE17Plus) {
 			options.put(CompilerOptions.OPTION_Release, CompilerOptions.ENABLED);
-		}
+//		}
 		return options;
 	}
 	private String[] getClasspathWithPreviewAPI() {
@@ -125,20 +119,20 @@ public class PreviewFeatureTest extends AbstractRegressionTest9 {
 					"	^^^^\n" +
 					"Zork cannot be resolved to a type\n" +
 					"----------\n" +
-					"2. ERROR in X.java (at line 4)\n" +
+					"2. WARNING in X.java (at line 4)\n" +
 					"	ABC abc = null;\n" +
 					"	^^^\n" +
-					"This API is part of the preview feature \'Test Feature\' which is disabled by default. Use --enable-preview to enable\n" +
+					"You are using an API that is part of the preview feature 'Test Feature' and may be removed in future\n" +
 					"----------\n" +
-					"3. ERROR in X.java (at line 6)\n" +
+					"3. WARNING in X.java (at line 6)\n" +
 					"	(new ABC()).doSomething();\n" +
 					"	^^^^^^^^^^^^^^^^^^^^^^^^^\n" +
-					"This API is part of the preview feature \'Test Feature\' which is disabled by default. Use --enable-preview to enable\n" +
+					"You are using an API that is part of the preview feature 'Test Feature' and may be removed in future\n" +
 					"----------\n" +
-					"4. ERROR in X.java (at line 6)\n" +
+					"4. WARNING in X.java (at line 6)\n" +
 					"	(new ABC()).doSomething();\n" +
 					"	     ^^^\n" +
-					"This API is part of the preview feature \'Test Feature\' which is disabled by default. Use --enable-preview to enable\n" +
+					"You are using an API that is part of the preview feature 'Test Feature' and may be removed in future\n" +
 					"----------\n",
 					classLibs,
 					true,
@@ -177,21 +171,21 @@ public class PreviewFeatureTest extends AbstractRegressionTest9 {
 					"	Zork z = null;\n" +
 					"	^^^^\n" +
 					"Zork cannot be resolved to a type\n" +
-					"----------\n" +
-					"2. ERROR in X.java (at line 5)\n" +
-					"	ABC abc = null;\n" +
-					"	^^^\n" +
-					"This API is part of the preview feature \'Test Feature\' which is disabled by default. Use --enable-preview to enable\n" +
-					"----------\n" +
-					"3. ERROR in X.java (at line 7)\n" +
-					"	(new ABC()).doSomething();\n" +
-					"	^^^^^^^^^^^^^^^^^^^^^^^^^\n" +
-					"This API is part of the preview feature \'Test Feature\' which is disabled by default. Use --enable-preview to enable\n" +
-					"----------\n" +
-					"4. ERROR in X.java (at line 7)\n" +
-					"	(new ABC()).doSomething();\n" +
-					"	     ^^^\n" +
-					"This API is part of the preview feature \'Test Feature\' which is disabled by default. Use --enable-preview to enable\n" +
+//					"----------\n" +
+//					"2. WARNING in X.java (at line 5)\n" +
+//					"	ABC abc = null;\n" +
+//					"	^^^\n" +
+//					"You are using an API that is part of the preview feature 'Test Feature' and may be removed in future\n" +
+//					"----------\n" +
+//					"3. WARNING in X.java (at line 7)\n" +
+//					"	(new ABC()).doSomething();\n" +
+//					"	^^^^^^^^^^^^^^^^^^^^^^^^^\n" +
+//					"You are using an API that is part of the preview feature 'Test Feature' and may be removed in future\n" +
+//					"----------\n" +
+//					"4. WARNING in X.java (at line 7)\n" +
+//					"	(new ABC()).doSomething();\n" +
+//					"	     ^^^\n" +
+//					"You are using an API that is part of the preview feature 'Test Feature' and may be removed in future\n" +
 					"----------\n",
 					classLibs,
 					true,
